delete unuse make command

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,12 @@
-AWS_BUCKET=
+AWS_REGION=
 AWS_ACCOUNT_ID=
 AWS_PROFILE=
+AWS_BUCKET=
 AWS_ALB_DNS=
 USER_NAME=
 VERSION=2023-05-11
 MODEL=sgd_classifier_ctr_model
+
+TF_VAR_aws_region=${AWS_REGION}
+TF_VAR_aws_profile=${AWS_PROFILE}
+TF_VAR_aws_account_id=${AWS_ACCOUNT_ID}
